improve security code